fix whitespace

--- a/docs/style/index.css
+++ b/docs/style/index.css
@@ -7,7 +7,7 @@ html, body {
 header {
   width: 100vw;
   box-sizing: border-box;
-  padding: 10px 80px;
+  padding: 10px clamp(20px, 4vw, 80px);
 }
 header a {
   font-family: "DM Sans", sans-serif;
